add swagger docs for progress requests
